# swb2

./: .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  DEVELOPMENT_GUIDELINES.md  DISCLAIMER.md  Doxyfile.mac_osx  FORD_project_file.md  LICENSE.md  README.md  THIRD_PARTY_LICENSES.md  VERSION  code.json  git_push.sh  meson.build  meson_options.txt  pixi.toml  swb2.zsh
cmake/: FindCurl.cmake  FindGCC.cmake  FindGfortran.cmake  FindHDF5.cmake  FindHDF5_HL.cmake  FindNetCDF.cmake  FindQuadMath.cmake  FindSzip.cmake  FindWinPthread.cmake  FindZlib.cmake  find_programs_and_libraries.cmake  options_and_targets.cmake  print_summary.cmake  set_compiler_flags_and_directives.cmake  version_control.cmake
design/: FAO56_2025_Table_6.10_Tbase_Tupper.tsv  FAO56_2025_Table_6.11_GDD_stages.tsv  FAO56_2025_Table_6.12_GDD_stages_supplemental.tsv  FAO56_2025_Table_7.1_Kcb_values.tsv  FAO56_2025_Table_7.2_Kcb_field_crops.tsv  FAO56_2025_Table_7.3_Kcb_trees_vines.tsv  FAO56_2025_reference_tables_notes.md  PROJECT_CONTEXT.md  architecture_overview.md  assessment__mixed_precision_and_iso_c_binding.md  build_consideration__static_vs_dynamic__gfortran_ifx.md  build_revamp__pixi_and_simplified_meson.md  changelog.md  changelog__june_2026.md  changelog_june_2026.md  code_signing_options.md  developer_quickstart.md  doxygen_documentation_plan.md  expectations_for_code.md  fao56_two_stage_implementation_issues.md  feature_consideration__adopt_modern_PROJ_library.md  feature_consideration__adopt_pixi_for_library_management.md  feature_consideration__bmi_for_swb2_modflow_coupling.md  feature_consideration__reading_writing_geotiffs_gdal.md  feature_consideration__self_documenting_directives.md  feature_consideration__unit_agnostic_operation.md  github_and_gitlab.md  maybe_uninitialized_fixes.md  phenology_implementation_plan.md  phenology_module_design.md  plans_for_code_and_repo_improvement.md  progress_note__provisional_release__june_2026.md  static_analysis_remediation_plan.md  static_analysis_summary_for_review.md  test_cleanup_plan.md  test_drive_migration_guide.md  testing_strategy.md  unused_functions_analysis.md
doc/: Doxyfile  Doxyfile.mac_osx  FORD_project_file.md  README.md  mainpage.md  make_documentation.sh
doc_src/: custom-modified-doxygen-awesome.css  header.html  index.md
docker/: build_fedora_env.sh  build_swb2.sh  build_swb2_fedora.sh  build_swb2_ubuntu.sh  build_ubuntu_env.sh  fedora_build_env.docker  swb2_build_fedora.docker  swb2_build_ubuntu.docker  swb_build.docker  ubuntu_build_env.docker
docs/: 0001__abstract_8md.html  0001__abstract_8md_source.html  0002__introduction_8md.html  0002__introduction_8md_source.html  0002a__background_8md.html  0002a__background_8md_source.html  0002b__scope__and__purpose_8md.html  0002b__scope__and__purpose_8md_source.html  0002c__changes__from__previous__versions_8md.html  0002c__changes__from__previous__versions_8md_source.html  0003__model__description_8md.html  0003__model__description_8md_source.html  0003a__overview__and__capabilities_8md.html  0003a__overview__and__capabilities_8md_source.html  0003b__model__theory_8md.html  0003b__model__theory_8md_source.html  0003c00__process__options_8md.html  0003c00__process__options_8md_source.html  0003c01__precipitation_8md.html  0003c01__precipitation_8md_source.html  0003c02__interception_8md.html  0003c02__interception_8md_source.html  0003c03__snowfall_8md.html  0003c03__snowfall_8md_source.html  0003c04__snowmelt_8md.html  (+4581 more)
share/: swb.zpi  (+3 more)
src/: CMakeLists.txt  LU_lookup_NLCD.txt  actual_et__fao56.F90  actual_et__fao56.f90  actual_et__fao56__two_stage.F90  actual_et__gridded_values.F90  actual_et__thornthwaite_mather.F90  actual_et__thornthwaite_mather_eqns.F90  actual_evapotranspiration__fao56.f90  actual_evapotranspiration__thornthwaite.F90  awc__depth_integrated.F90  awc__gridded_values.F90  awc__table_values.F90  cell_class.F90  cell_collection.F90  cell_vector.F90  constants_and_conversions.F90  continuous_frozen_ground_index.F90  control.F90  control_file.F90  control_old.F90  crop_coefficients__FAO_56.F90  crop_coefficients__fao56.F90  daily_calculation.F90  data_catalog.F90  data_catalog_entry.F90  data_column.F90  data_file.F90  data_frame.F90  datetime.F90  dictionary.F90  dictionary.f90  direct_net_infiltration__gridded_data.F90  direct_recharge__gridded_data.F90  direct_soil_moisture__gridded_data.F90  disclaimers.F90  et_FAO56_crop_coefficients.F90  et__gridded_values.F90  et__hargreaves_samani.F90  et__jensen_haise.F90  (+123 more)
src/proj4/: PJ_aea.c  PJ_aea.c~  PJ_aeqd.c  PJ_airy.c  PJ_aitoff.c  PJ_august.c  PJ_boggs.c  PJ_cc.c  PJ_cea.c  PJ_collg.c  PJ_crast.c  PJ_denoy.c  PJ_eck1.c  PJ_eck2.c  PJ_eck4.c  PJ_eck5.c  PJ_fahey.c  PJ_gall.c  PJ_geos.c  PJ_gins8.c  PJ_hatano.c  PJ_healpix.c  PJ_isea.c  PJ_krovak.c  PJ_larr.c  PJ_lask.c  PJ_lcca.c  PJ_mbt_fps.c  PJ_mbtfpp.c  PJ_mbtfpq.c  PJ_mill.c  PJ_moll.c  PJ_natearth.c  PJ_nell.c  PJ_nell_h.c  PJ_nocol.c  PJ_nzmg.c  PJ_ob_tran.c  PJ_omerc.c  PJ_putp2.c  (+56 more)
test/unit_tests/: CMakeLists.txt  FRUIT.py  fruit.F90  fruit_driver.F90  fruit_util.F90  make_test_suite.py  meson.build  old_test_kiss.F90  test_FAO56_functions.F90  test_allocatable_string.F90  test_constants_and_conversions.F90  test_crop_coefficients__FAO56.F90  test_datetime.F90  test_exceptions.F90  test_exceptions__index_values_valid.F90  test_fao56.F90  test_fixtures.F90  test_fstring_list.F90  test_gash.F90  test_growing_degree_day.F90  test_interception_bucket.F90  test_parameters.F90  test_phenology.F90  test_solar_calculations.F90  test_timer.F90  test_two_stage_evaporation__FAO56.F90  test_two_stage_evapotranspiration__FAO56.F90  testdrive.F90  tester.F90
test/unit_tests/temp/: test_crop_coefficients__FAO56.F90  test_datetime.F90  test_gash.F90
test/unit_tests/test_support/: Calculate_Gash_interception.ipynb
test/unit_tests/test_support/.ipynb_checkpoints/: Calculate_Gash_interception-checkpoint.ipynb
tests/src/: CMakeLists.txt  test__CN_update.F90  test__FAO56.F90  test__GDD.F90  test__file_utils.F90  test__gash.f90  test__proj4_support.F90
(+1469 files in other folders)
