# optimization_level 1: DEBUG; optimization_level 2: RELEASE
option('optimization_level', type : 'integer', min : 1, max : 2, value : 2)

# this is critical for compilation to succeed!! modify for your system.
option('netcdf_root',
  type: 'string',
  value: '',  # empty means "use platform default"
  description: 'Path to NetCDF installation root (leave empty to use platform default)'
)